<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/pirmasVaizdas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/colorsText"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/antrasVaizdas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/colorsText"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/treciasVaizdas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/colorsText"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ketvirtasVaizdas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/colorsText"/>

    </LinearLayout>

    <TableLayout
        android:id="@+id/table1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:stretchColumns="0,1">

        <TableRow
            android:layout_weight="1">

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:text="@string/greenBtn"
                style="@style/buttonText"
                android:onClick="onClick"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="20dp"
                android:text="@string/blueBtn"
                style="@style/buttonText"
                android:onClick="onClick"/>

        </TableRow>

        <TableRow
            android:layout_weight="1">

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:text="@string/redBtn"
                style="@style/buttonText"
                android:onClick="onClick"/>

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="20dp"
                android:text="@string/yellowBtn"
                style="@style/buttonText"
                android:onClick="onClick"/>

        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vardasPavarde"
                android:textAlignment="center"/>


        </TableRow>

    </TableLayout>

</LinearLayout>